fix command wrapper button overflow

--- a/frontend/styles/editor.sass
+++ b/frontend/styles/editor.sass
@@ -13,7 +13,7 @@ $editorContentHeight:  calc(100vh - 48px - 20px)
   margin: 20px auto 0 auto
 
 .output-or-shell
-  width: 50%
+  width: 100%
   height: 100%
 
   //border: 1px solid yellow
